[A1.1] centralisation config + nettoyage code mort